namespace CustomLib.Models.Issues
{
    public class IssueUpdate
    {
        public string Label { get; set; } = "";
    }
}
