namespace CustomLib.Models.Users
{
    public class UserUpdate
    {
        public string FirstName { get; set; } = "";
        public string LastName { get; set; } = "";
    }
}
